
Core
==========

 * Enriched the SpringAdaptor to be more flexible.
 * Added a utility ConfigurableSpringAdaptor.
 
Examples
========
 
 * Added examples to show how to use exception handling in different ways.
 * Added example to show how to use caching mechanism. 
   
Tutorial
========
 
 * Added Step 19 (caching) to show how to use caching mechanism. 
   

Miscellaneous
=============

Bug Fixes
=========
 
3rd Party
=================================================
openadaptor3 production 3.4.6 Release Notes 

See licence.txt for Licence information.
=================================================

Date: February 2011 
author: openadaptor Core Team

openadaptor 3.4.6
=======

Connectors
==========
   
Processors
==========

Examples
========
 
 * All examples should now reference SpringAdaptor (which encompasses the
   behaviour of the now defunct SpringApplication also)
   
 * Added patterns area to examples. This area is intended for general usage patterns
   for implementing common behaviours.
 
 * Added example to illustrate how a file (or any stream) containing multiple
   distinct XML documents may be split into individual records and processed (in this
   case validated against a supplied schema).
   

Miscellaneous
=============

 * SpringApplication has been removed - SpringAdaptor now can be used anywhere it may
   have been used - having both mechanisms was unnecessary and proved confusing. (Note 
   that many files have required minor refactoring to make this change transparent).
   Users must now use SpringAdaptor *instead* of SpringApplication which has been removed.

Bug Fixes
=========

 * (SC104) Possible NPE in Sybase specific JDBC Connection.
 * (SC106) Make record end delimiter optional in RegexMultilineReader
 
3rd Party
========= 
            
=================================================
openadaptor3 production 3.4.5 Release Notes

See licence.txt for Licence information.
=================================================
